<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="account_expired_alert">Your WhatsApp service for %1$s expired on %2$s. Purchase service?</string>
    <string name="account_info_account_num">Phone number</string>
    <string name="account_info_check_eligibility">Checking eligibility...</string>
    <string name="account_info_confirm_continue_with_purchase">Do you still want to purchase service?</string>
    <string name="account_info_desc">Your service is attached to the phone number listed above. You can freely switch your mobile device, reinstall, or upgrade the software as long as your service phone number stays the same. We hope you enjoy our service.</string>
    <string name="account_info_details">Details</string>
    <string name="account_info_expiration">Service expiration</string>
    <string name="account_info_gave_service">Service purchased for %1$s.</string>
    <string name="account_info_purchase_extension_for">Purchase extension for</string>
    <string name="account_info_received_service_from_friend">%1$s has purchased service for you.</string>
    <string name="account_info_received_service_from_unknown">A friend has purchased service for you.</string>
    <string name="account_info_send_addr_body">Your WhatsApp Messenger payment address is:</string>
    <string name="account_info_send_addr_title">WhatsApp payment address</string>
    <string name="account_info_status_expired">Expired</string>
    <string name="account_info_status_unknown">Unknown</string>
    <string name="account_sync_acct_added">WhatsApp account is added already</string>
    <string name="account_sync_add">Please wait while we are adding your account</string>
    <string name="account_sync_authenticating">Authenticating</string>
    <string name="account_sync_message_detail_format">Message %s</string>
    <string name="account_sync_summary_column">WhatsApp</string>
    <string name="account_sync_voip_call_detail_format">WhatsApp Call %s</string>
    <string name="activity_not_found">You may not have a proper app for viewing this content</string>
    <string name="add_anonymous_contact_with_no_displayname">You may have just added a contact without giving a display name</string>
    <string name="add_broadcast_recipient">Add recipient...</string>
    <string name="add_caption">Add a caption...</string>
    <string name="add_contact">Add to contacts</string>
    <string name="add_contact_as_new_or_existing">Create a new contact or add to an existing contact?</string>
    <string name="add_exist">Add to existing contact</string>
    <string name="add_group_participant">Add participant...</string>
    <string name="add_group_participants">Add group participants</string>
    <string name="add_info_to_existing_contact">Add to exist contact</string>
    <string name="add_info_to_new_contact">Add to new contact</string>
    <string name="add_shortcut">Add chat shortcut</string>
    <string name="add_shortcut_short">Add shortcut</string>
    <string name="add_status">Add new status</string>
    <string name="address">address</string>
    <string name="adjust_date">Adjust date</string>
    <string name="alert">Alert</string>
    <string name="all_images">All pictures</string>
    <string name="all_media">All media</string>
    <string name="all_videos">All videos</string>
    <string name="allow">Allow</string>
    <string name="amazon_fire_release_on_non_amazon_fire_device">"You've installed an unsupported version of WhatsApp. Please download the correct version from &lt;a href=\"%1$s\">Google Play Store&lt;/a> or from &lt;a href=\"%2$s\">whatsapp.com&lt;/a>."</string>
    <string name="amazon_home_hero_widget_title">Unread messages</string>
    <string name="android_wear_cant_talk">"Sorry, can't talk now"</string>
    <string name="android_wear_haha">Haha</string>
    <string name="android_wear_lol">Lol</string>
    <string name="android_wear_nice">Nice</string>
    <string name="android_wear_no">No</string>
    <string name="android_wear_ok">Ok</string>
    <string name="android_wear_on_my_way">On my way</string>
    <string name="android_wear_see_you_soon">See you soon</string>
    <string name="android_wear_thanks">Thanks</string>
    <string name="android_wear_yes">Yes</string>
    <string name="answer_the_call">Answer</string>
    <string name="archive_all_chats">Archive all chats</string>
    <string name="archive_all_chats_ask">Are you sure you want to archive ALL chats?</string>
    <string name="archive_broadcast">Archive broadcast list</string>
    <string name="archive_conversation">Archive chat</string>
    <string name="archived_chats">Archived chats</string>
    <string name="archived_chats_count">Archived chats (%d)</string>
    <string name="assign_to_contact">Assign to contact</string>
    <string name="attach">Attach</string>
    <string name="attach_audio">Audio</string>
    <string name="attach_contact">Contact</string>
    <string name="attach_location">Location</string>
    <string name="attach_media">Attach media</string>
    <string name="attach_picture_from_camera">Photo</string>
    <string name="attach_picture_from_gallery">Gallery</string>
    <string name="attach_video">Video</string>
    <string name="audio_note_slide_to_cancel">Slide to cancel</string>
    <string name="audio_note_tip">Hold to record, release to send</string>
    <string name="audio_note_tip_2">Please record a longer message</string>
    <string name="audio_note_top_mic_tip">Please speak to the microphone on top of your phone</string>
    <string name="block">Block</string>
    <string name="block_ask">Block %s? Blocked contacts will no longer be able to call you or send you messages.</string>
    <string name="block_list_desc">"Tap %s at the top of your screen to select a contact to block.

Blocked contacts will no longer be able to call you or send you messages."</string>
    <string name="block_list_header">Blocked contacts</string>
    <string name="block_list_menu_unblock">Unblock %s</string>
    <string name="block_timeout">Failed to block a contact now, Please try again later!</string>
    <string name="broadcast_msg">Broadcast message</string>
    <string name="broadcast_reach_limit">Broadcast to a maximum of %1$d people at a time.</string>
    <string name="next">Next</string>
    <string name="gdrive_new_user_setup_footer_info">You can change these settings at any time in WhatsApp Settings > Chat Settings > Chat Backup</string>
    <string name="gdrive_new_user_setup_message_media_and_messages">Back up your chat history and media to Google Drive so if you change or lose your phone, your chats are safe.</string>
    <string name="settings_gdrive_account_name">Account</string>
    <string name="settings_gdrive_backup_now_category_title">Last Backup</string>
    <string name="settings_gdrive_backup_now_title">Back up now</string>
    <string name="settings_gdrive_backup_options_title">Back up to Google Drive</string>
    <string name="settings_gdrive_category_title">Google Drive settings</string>
    <string name="settings_gdrive_network_settings_title">Back up over</string>
</resources>