<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/google_drive_backup_error_info_view" android:background="@color/meat_brown" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@id/google_drive_backup_error_text_views" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/google_drive_backup_error_icon" android:paddingLeft="@dimen/horizontal_padding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_action_info_dark" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/black" android:id="@id/google_drive_backup_error_info" android:paddingLeft="20.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="1.0" />
            <ImageView android:id="@id/cancel_error_view" android:background="?selectableItemBackgroundBorderless" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/inline_audio_cancel" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:paddingLeft="0.0dip" android:paddingBottom="@dimen/card_v_padding" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center_vertical" android:layout_gravity="left" android:id="@id/settings_gdrive_backup_now_category_title" android:paddingLeft="@dimen/gdrive_drawable_padding_left" android:paddingTop="20.0dip" android:paddingRight="@dimen/card_h_padding2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/settings_gdrive_backup_now_category_title" android:drawableLeft="@drawable/ic_backup" android:drawablePadding="@dimen/gdrive_drawable_padding_with_text" />
            <TextView android:textSize="14.0sp" android:textColor="#d0333333" android:id="@id/gdrive_new_user_setup_message" android:paddingTop="0.0dip" android:paddingRight="@dimen/card_h_padding2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gdrive_view_left_padding" android:layout_marginTop="14.0dip" android:layout_marginBottom="8.0dip" android:text="@string/gdrive_new_user_setup_message_media_and_messages" />
            <LinearLayout android:orientation="vertical" android:id="@id/gdrive_new_user_setup_freq_options" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="24.0dip" android:layout_marginBottom="20.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/settings_gdrive_backup_info_box" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gdrive_view_left_padding" android:layout_marginTop="4.0dip">
                <TextView android:textSize="13.0sp" android:textColor="@color/dark_gray" android:id="@id/gdrive_backup_info" android:paddingRight="@dimen/card_h_padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:lineSpacingMultiplier="1.15" />
                <TextView android:textColor="#d0333333" android:layout_gravity="center_vertical" android:id="@id/gdrive_backup_general_info" android:paddingRight="@dimen/card_h_padding2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingMultiplier="1.25" />
                <LinearLayout android:orientation="vertical" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="24.0dip">
                    <Button android:textSize="14.0sp" android:textColor="@color/selector_google_drive_green_button_text" android:layout_gravity="left" android:id="@id/google_drive_backup_now_btn" android:background="@drawable/btn_green_small" android:paddingLeft="@dimen/horizontal_padding" android:paddingRight="@dimen/horizontal_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="8.0dip" android:minWidth="@dimen/btn_min_width" android:text="@string/settings_gdrive_backup_now_title" />
                    <LinearLayout android:orientation="horizontal" android:id="@id/progress_bar_container" android:paddingRight="@dimen/card_h_padding2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ProgressBar android:layout_gravity="center_vertical" android:id="@id/google_drive_progress" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/horizontal_padding" android:layout_weight="1.0" style="?android:attr/progressBarStyleHorizontal" />
                        <ImageView android:layout_gravity="center_horizontal" android:id="@id/cancel_download" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_backup_cancel" android:scaleType="center" />
                    </LinearLayout>
                    <TextView android:textColor="@color/dark_gray" android:layout_gravity="top" android:id="@id/google_drive_backup_now_btn_info" android:paddingRight="@dimen/card_h_padding2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="@color/accent" android:gravity="center_vertical" android:layout_gravity="left" android:id="@id/settings_gdrive_gdrive_category_title" android:paddingLeft="@dimen/gdrive_drawable_padding_left" android:paddingRight="@dimen/card_h_padding2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_gdrive_category_title" android:drawableLeft="@drawable/ic_drive" android:drawablePadding="@dimen/gdrive_drawable_padding_with_text" />
            <LinearLayout android:orientation="vertical" android:id="@id/settings_gdrive_category" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gdrive_view_left_padding">
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/settings_gdrive_change_frequency_view" android:background="?selectableItemBackground" android:paddingRight="@dimen/card_h_padding2" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:minHeight="52.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/settings_gdrive_backup_options_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_gdrive_backup_options_title" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/dark_gray" android:id="@id/settings_gdrive_backup_options_summary" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/settings_gdrive_change_account_view" android:background="?selectableItemBackground" android:paddingRight="@dimen/card_h_padding2" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
                    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="52.0dip" android:layout_weight="1.0">
                        <TextView android:textSize="16.0sp" android:textColor="@color/selector_google_drive" android:id="@id/settings_gdrive_change_account_title" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_gdrive_account_name" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/dark_gray" android:gravity="center_vertical" android:id="@id/settings_gdrive_account_name_summary" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    </LinearLayout>
                    <ImageView android:layout_gravity="center" android:id="@id/backup_settings_icon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_backup_settings" />
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/settings_gdrive_network_settings_view" android:background="?selectableItemBackground" android:paddingRight="@dimen/card_h_padding2" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:minHeight="52.0dip">
                    <TextView android:textSize="16.0sp" android:textColor="@color/selector_google_drive" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_gdrive_network_settings_title" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/dark_gray" android:id="@id/settings_gdrive_network_settings_summary" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                </LinearLayout>
                <Button android:textSize="14.0sp" android:textColor="@color/selector_google_drive_green_button_text" android:gravity="center" android:id="@id/gdrive_new_user_setup_btn" android:background="@drawable/btn_green_small" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:layout_marginBottom="4.0dip" android:minWidth="@dimen/btn_min_width" android:text="@string/next" />
                <TextView android:textSize="13.0sp" android:textColor="#99515e66" android:layout_gravity="center_vertical" android:id="@id/gdrive_new_user_setup_footer_info" android:paddingRight="@dimen/card_h_padding2" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/gdrive_new_user_setup_footer_info" android:lineSpacingMultiplier="1.15" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>